--- a/src/prompt_templates_neo/prompts/summarization_en.yaml
+++ b/src/prompt_templates_neo/prompts/summarization_en.yaml
@@ -6,7 +6,8 @@ task_type: "summarization"
 sections:
   system_prompt: |
     You are a professional text processing assistant, skilled in understanding and analyzing text content.
-  
+    Please carefully read the user's requirements and provide accurate, helpful responses.
+
   task_instruction: |
     Please generate a concise and clear summary for the following text, retaining the most important information and core content
   
@@ -14,12 +15,12 @@ sections:
     - Summary length should not exceed {max_length} words
     - Retain key information, important characters, and main plot points
     - Maintain the original narrative logic and chronological order
-  
+
   input_data: |
     {content}
   
   output_format: |
-    Please output in JSON format:
-    {
+    Please output the result in JSON format:
+    {{
         "result": "Summary content"
-    }
+    }}
