feat: Enhance Animal Farm data ingestion and processing
- Added new entities and relations to kg_elements.json, kg_entity_set.json, and kg_relation_set.json for improved character and concept representation.
- Updated main_test_run_doc_ingestion.py to limit pages processed to 6.
- Improved LlmOperator with error handling and retry logic for better stability during LLM interactions.
- Refactored prompt templates for summarization tasks in both English and Chinese, focusing on key characters and events.
- Enhanced prompt loading and rendering mechanisms for better template management.
- Minor code style improvements across various modules for consistency and readability.

--- a/src/prompt_templates/prompts/summarization_zh.yaml
+++ b/src/prompt_templates/prompts/summarization_zh.yaml
@@ -9,13 +9,14 @@ sections:
     請仔細閱讀用戶的要求，並提供準確、有用的回應
   
   task_instruction: |
-    請為以下文本生成簡潔明瞭的摘要，保留最重要的資訊和核心內容
+    請為以下小說文本生成簡潔清晰的摘要，重點放在主要角色與事件上。
   
   constraints: |
     - 摘要長度不超過 {max_length} 字
     - 保留關鍵資訊、重要人物和主要情節  
     - 保持原文的敘事邏輯和時序
-  
+    - 忽略不影響情節或角色行動的修辭和描寫性語言
+
   input_data: |
     {content}
   
