--- a/src/prompt_templates/prompts/summarization_en.yaml
+++ b/src/prompt_templates/prompts/summarization_en.yaml
@@ -9,12 +9,13 @@ sections:
     Please carefully read the user's requirements and provide accurate, helpful responses.
 
   task_instruction: |
-    Please generate a concise and clear summary for the following text, retaining the most important information and core content
+    Please generate a concise and clear summary for the following fictional text, focusing on key characters and events.
   
   constraints: |
     - Summary length should not exceed {max_length} words
     - Retain key information, important characters, and main plot points
     - Maintain the original narrative logic and chronological order
+    - Ignore decorative or descriptive language that does not affect plot or character actions
 
   input_data: |
     {content}
