refactor: Update LlmOperator error handling and streamline character evidence extraction

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.REPL.enableREPLSmartSend": false
+    "python.REPL.enableREPLSmartSend": false,
+    "flake8.args": ["--max-line-length=88"]
 }
